# ds01-jobs

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  benchmark.py  deploy.sh  pyproject.toml  ruff.toml  run.py
.github/workflows/: ci-integration.yml  ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/brownfield/: main.py  rate_limit.py
_legacy/context/: original-requirements.md  phase13-context.md  phase13-research.md  phase13-verification.md  repo-separation-decision.md
_legacy/deploy/: ds01-api.service  ds01-cloudflared.service
_legacy/scripts/: ds01-job-admin
_legacy/src/: auth.py  database.py  limiter.py  main.py  models.py  rate_limit.py  requirements.txt  scanner.py
action/: action.yml  entrypoint.py
config/: env.example
config/sudoers.d/: ds01-jobs
docs/: api-reference.md  architecture.md  ci.md  contributor-guide.md  deployment.md  user-guide.md
ds01-test-job/: Dockerfile  README.md
scripts/: dev-server.sh  run-test-suite.sh  sync-test-fixtures.sh
src/: auth.py  models.py  scanner.py
src/ds01_jobs/: __init__.py  app.py  auth.py  cli.py  client.py  config.py  database.py  executor.py  gpu.py  health.py  jobs.py  middleware.py  models.py  rate_limit.py  revalidate.py  runner.py  scanner.py  submit.py  url_validation.py
src/routers/: jobs.py
systemd/: actions-runner.service  ds01-api.service  ds01-cloudflared.service  ds01-jobs-sudoers  ds01-revalidate.service  ds01-revalidate.timer  ds01-runner.service
systemd/actions-runner.service.d/: resilience.conf
tests/: conftest.py  helpers.py
(+60 files in other folders)
